Fix edit post style admin (on mobile)

--- a/admin/admin_style.css
+++ b/admin/admin_style.css
@@ -298,6 +298,41 @@ textarea {
 	}
 }
 
+/*--------edit post------------*/
+.edit-post .flex-btn {
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+}
+
+.edit-post .flex-btn input[type="submit"] {
+	padding: 0.5rem 1.5rem;
+}
+
+.edit-post .btn {
+	width: 100%;
+	text-align: center;
+	font-size: 1.2rem;
+	margin: .5rem;
+}
+
+
+@media (max-width: 768px) {
+	.edit-post .flex-btn {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.edit-post .flex-btn input[type="submit"] {
+		width: 100%;
+		margin-bottom: 10px;
+	}
+
+	.edit-post .flex-btn input[type="submit"]:last-child {
+		margin-bottom: 0;
+	}
+}
+
 /*--------form container--------------*/
 
 .box-container {
